Skaffold/Backend/k8s/notification-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-deployment
spec:
  selector:
    matchLabels:
      app: notification
  template:
    metadata:
      labels:
        app: notification
    spec:
      containers:
      - name: notification-container
        image: notification-server
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "64Mi"
            cpu: "250m"
        ports:
        - containerPort: 8080
