Skaffold/Backend/k8s/core-service.yml
apiVersion: v1
kind: Service
metadata:
  name: core-service
spec:
  selector:
    app: core
  type : ClusterIP
  ports:
  - name : http
    port: 80
    targetPort: 3000
