Skaffold/Backend/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: express-app
  labels:
    app.kubernetes.io/name: express-app
spec:
  ingressClassName : nginx
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: core-service
              port:
                number: 80

    - http:
        paths:
        - pathType: Prefix
          path: "/notification"
          backend:
            service:
              name: notification-service
              port:
                number: 80
